# discourse2fedmsg

./: .gitignore  .mergify.yml  .pre-commit-config.yaml  .zuul.yaml  README.md  README.rst  Vagrantfile  app.py  dev.ini  discourse2fedmsg.cfg.default  discourse2fedmsg.py  pyproject.toml  setup.py  test_discourse2fedmsg.py  test_requirements.txt  tox.ini  wsgi.py
.github/workflows/: pre-commit-autoupdate.yml  tests.yml
.s2i/: environment
deploy/: discourse2fedmsg.wsgi
devel/: run-liccheck.sh
devel/ansible/roles/dev/files/: bashrc  discourse.service  discourse2fedmsg.service  emberjs.service  fedora-messaging-logger.service  mailcatcher.service
devel/ansible/roles/dev/tasks/: discourse.yml  main.yml  rabbitmq.yml
discourse2fedmsg/: __init__.py  app.py  database.py  defaults.py
discourse2fedmsg/migrations/: script.py.mako
discourse2fedmsg/templates/: index.html  main.html
discourse2fedmsg/utils/: healthz.py
discourse2fedmsg/views/: __init__.py  webhook.py
docs/: conf.py  contributing.rst  index.rst
news/: get-authors.py
tests/: app_config.py  conftest.py  test_healthz.py  test_root.py  test_webhook.py
